@@ -11,7 +11,7 @@ import com.rakovpublic.jneuropallium.worker.net.layers.impl.file.FileLayersMeta;
 import com.rakovpublic.jneuropallium.worker.net.layers.impl.inmemory.InMemoryInputResolver;
 import com.rakovpublic.jneuropallium.worker.net.neuron.impl.cycleprocessing.ProcessingFrequency;
 import com.rakovpublic.jneuropallium.worker.net.signals.*;
-import com.rakovpublic.jneuropallium.worker.net.signals.storage.*;
+import com.rakovpublic.jneuropallium.worker.net.signals.storage.IInputResolver;
 import com.rakovpublic.jneuropallium.worker.net.signals.storage.inmemory.*;
 import com.rakovpublic.jneuropallium.worker.net.storages.filesystem.IStorage;
 import com.rakovpublic.jneuropallium.worker.net.study.IDirectLearningAlgorithm;
@@ -25,6 +25,7 @@ import org.apache.logging.log4j.Logger;
 import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class LocalApplication implements IApplication {
     private static final Logger logger = LogManager.getLogger(LocalApplication.class);
@@ -51,14 +52,24 @@ public class LocalApplication implements IApplication {
         String inputLoadingStrategy = context.getProperty("configuration.input.loadingstrategy");
         Integer historySlow = Integer.parseInt(context.getProperty("configuration.history.slow.runs"));
         Long historyFast = Long.parseLong(context.getProperty("configuration.history.fast.runs"));
-        IInputLoadingStrategy inputLoadingStrategyMain = this.getLoadingStrategy(inputLoadingStrategy);
+        Integer fastSlowRatio = Integer.parseInt(context.getProperty("configuration.slowfast.ratio"));
+        ILayersMeta layersMeta = new FileLayersMeta<>(fs.getItem(layerPath), fs);
+        HashMap<String,ProcessingFrequency> processingFrequencyHashMap =new HashMap<>();
+
+        try {
+            processingFrequencyHashMap =  new ObjectMapper().readValue(context.getProperty("configuration.processing.frequency.map"), HashMap.class);
+        } catch (JsonProcessingException e) {
+            logger.error("Cannot find parse " + context.getProperty("configuration.processing.frequency.map") + "  to processing frequency map", e);
+            e.printStackTrace();
+        }
+        IInputLoadingStrategy inputLoadingStrategyMain = new CycledInputLoadingStrategy(layersMeta,fastSlowRatio,processingFrequencyHashMap);
         IInputResolver inputResolver = new InMemoryInputResolver(new InMemorySignalPersistStorage(), new InMemorySignalHistoryStorage(historySlow, historyFast), inputLoadingStrategyMain);
         String inputs = context.getProperty("configuration.input.inputs");
         for (InputData inputData : this.getInputs(inputs)) {
             inputResolver.registerInput(inputData.getiInputSource(), inputData.isMandatory(), inputData.getInitStrategy());
         }
         structBuilder.withHiddenInputMeta(inputResolver);
-        structBuilder.withLayersMeta(new FileLayersMeta<>(fs.getItem(layerPath), fs));
+        structBuilder.withLayersMeta(layersMeta);
         StructMeta meta = structBuilder.build();
         boolean isTeacherStudying = Boolean.parseBoolean(context.getProperty("configuration.isteacherstudying"));
 
@@ -78,95 +89,107 @@ public class LocalApplication implements IApplication {
 
             HashMap<String, List<IResultSignal>> desiredResult = inputResolver.getDesiredResult();
             if (isTeacherStudying && desiredResult != null) {
-                IResultComparingStrategy resultComparingStrategy = null;
-                String resultComparingStrategyClass = context.getProperty("configuration.resultComparingStrategyClass");
-                try {
-                    resultComparingStrategy = (IResultComparingStrategy) Class.forName(resultComparingStrategyClass).getDeclaredConstructor().newInstance();
-                } catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException |
-                        InstantiationException | IllegalAccessException e) {
-                    logger.error("cannot create result comparing strategy object", e);
-                }
-                String algoType = context.getProperty("configuration.studyingalgotype");
-                ObjectMapper mapper = new ObjectMapper();
-                for (; currentRun < maxRun || isInfinite; currentRun++) {
-                    //Supervised learning
-                    if (algoType != null && resultComparingStrategy != null) {
-                        List<IResult> idsToFix;
-                        if (algoType.equals("direct")) {
-                            IDirectLearningAlgorithm directLearningAlgorithm = null;
-                            String directClass = context.getProperty("configuration.learning.direct.class");
-                            String directJson = context.getProperty("configuration.learning.direct.json");
-                            try {
-                                if (directJson != null) {
-                                    directLearningAlgorithm = (IDirectLearningAlgorithm) mapper.readValue(directJson, Class.forName(directClass));
-                                } else {
-                                    directLearningAlgorithm = (IDirectLearningAlgorithm) Class.forName(directClass).newInstance();
+                if (meta.getInputResolver().getSignalPersistStorage().hasSignalsToProcess()) {
+                    IResultComparingStrategy resultComparingStrategy = null;
+                    String resultComparingStrategyClass = context.getProperty("configuration.resultComparingStrategyClass");
+                    try {
+                        resultComparingStrategy = (IResultComparingStrategy) Class.forName(resultComparingStrategyClass).getDeclaredConstructor().newInstance();
+                    } catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException |
+                            InstantiationException | IllegalAccessException e) {
+                        logger.error("cannot create result comparing strategy object", e);
+                    }
+                    String algoType = context.getProperty("configuration.studyingalgotype");
+                    ObjectMapper mapper = new ObjectMapper();
+                    for (; currentRun < maxRun || isInfinite; currentRun++) {
+                        //Supervised learning
+
+                        if (algoType != null && resultComparingStrategy != null) {
+                            List<IResult> idsToFix;
+                            if (algoType.equals("direct")) {
+                                IDirectLearningAlgorithm directLearningAlgorithm = null;
+                                String directClass = context.getProperty("configuration.learning.direct.class");
+                                String directJson = context.getProperty("configuration.learning.direct.json");
+                                try {
+                                    if (directJson != null) {
+                                        directLearningAlgorithm = (IDirectLearningAlgorithm) mapper.readValue(directJson, Class.forName(directClass));
+                                    } else {
+                                        directLearningAlgorithm = (IDirectLearningAlgorithm) Class.forName(directClass).newInstance();
+                                    }
+                                } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
+                                    logger.error("Cannot create instance of IDirectLearningAlgorithm for class " + directClass, e);
+                                } catch (JsonProcessingException e) {
+                                    logger.error("Cannot create instance of IDirectLearningAlgorithm for json " + directJson, e);
+                                } catch (NullPointerException e) {
+                                    logger.error("Wrong configuration for IDirectLearningAlgorithm " + directClass + " config " + directJson);
                                 }
-                            } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
-                                logger.error("Cannot create instance of IDirectLearningAlgorithm for class " + directClass, e);
-                            } catch (JsonProcessingException e) {
-                                logger.error("Cannot create instance of IDirectLearningAlgorithm for json " + directJson, e);
-                            } catch (NullPointerException e) {
-                                logger.error("Wrong configuration for IDirectLearningAlgorithm " + directClass + " config " + directJson);
-                            }
-                            IResultLayer lr = process(meta,threads);
-                            while ((idsToFix = resultComparingStrategy.getIdsStudy(lr.interpretResult(), desiredResult)).size() > 0) {
+                                IResultLayer lr = process(meta, threads);
+                                while ((idsToFix = resultComparingStrategy.getIdsStudy(lr.interpretResult(), desiredResult)).size() > 0) {
+                                    meta.getInputResolver().saveHistory();
+                                    meta.getInputResolver().getSignalPersistStorage().cleanMiddleLayerSignals();
+                                    meta.learn(directLearningAlgorithm.learn(meta, desiredResult));
+                                    lr = process(meta, threads);
+                                }
+
+                                outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
                                 meta.getInputResolver().saveHistory();
-                                meta.getInputResolver().getSignalPersistStorage().cleanMiddleLayerSignals();
-                                meta.learn(directLearningAlgorithm.learn(meta, desiredResult));
-                                lr = process(meta,threads);
+                                meta.getInputResolver().populateInput();
+                            } else if (algoType.equals("object")) {
+                                IObjectLearningAlgo iObjectStudyingAlgo = null;
+                                String objectClass = context.getProperty("configuration.learning.object.class");
+                                String objectJson = context.getProperty("configuration.learning.object.json");
+                                try {
+                                    if (objectJson != null) {
+                                        iObjectStudyingAlgo = (IObjectLearningAlgo) mapper.readValue(objectJson, Class.forName(objectClass));
+                                    } else {
+                                        iObjectStudyingAlgo = (IObjectLearningAlgo) Class.forName(objectClass).newInstance();
+                                    }
+                                } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
+                                    logger.error("Cannot create instance of IObjectLearningAlgo for class " + objectClass, e);
+                                } catch (JsonProcessingException e) {
+                                    logger.error("Cannot create instance of IObjectLearningAlgo for json " + objectJson, e);
+                                } catch (NullPointerException e) {
+                                    logger.error("Wrong configuration for IObjectLearningAlgo " + objectClass + " config " + objectJson);
+                                }
+                                IResultLayer lr = process(meta, threads);
+                                while ((idsToFix = resultComparingStrategy.getIdsStudy(lr.interpretResult(), desiredResult)).size() > 0) {
+                                    meta.getInputResolver().saveHistory();
+                                    meta.getInputResolver().getSignalPersistStorage().cleanMiddleLayerSignals();
+                                    Integer layerId = meta.getResultLayer().getID();
+                                    HashMap<Long, List<ISignal>> studyMap = new HashMap<>();
+                                    for (IResult res : idsToFix) {
+                                        studyMap.put(res.getNeuronId(), iObjectStudyingAlgo.getLearningSignals(desiredResult, meta));
+                                    }
+                                    HashMap<Integer, HashMap<Long, List<ISignal>>> studyingRequest = new HashMap<>();
+                                    studyingRequest.put(layerId, studyMap);
+                                    meta.getInputResolver().getSignalPersistStorage().cleanMiddleLayerSignals();
+                                    inputResolver.getSignalPersistStorage().putSignals(studyingRequest);
+                                    lr = process(meta, threads);
+                                }
+                                outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
+                                meta.getInputResolver().saveHistory();
+                                meta.getInputResolver().populateInput();
                             }
 
-                            outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
-                            meta.getInputResolver().saveHistory();
-                            meta.getInputResolver().populateInput();
-                        } else if (algoType.equals("object")) {
-                            IObjectLearningAlgo iObjectStudyingAlgo = null;
-                            String objectClass = context.getProperty("configuration.learning.object.class");
-                            String objectJson = context.getProperty("configuration.learning.object.json");
-                            try {
-                                if (objectJson != null) {
-                                    iObjectStudyingAlgo = (IObjectLearningAlgo) mapper.readValue(objectJson, Class.forName(objectClass));
-                                } else {
-                                    iObjectStudyingAlgo = (IObjectLearningAlgo) Class.forName(objectClass).newInstance();
-                                }
-                            } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
-                                logger.error("Cannot create instance of IObjectLearningAlgo for class " + objectClass, e);
-                            } catch (JsonProcessingException e) {
-                                logger.error("Cannot create instance of IObjectLearningAlgo for json " + objectJson, e);
-                            } catch (NullPointerException e) {
-                                logger.error("Wrong configuration for IObjectLearningAlgo " + objectClass + " config " + objectJson);
-                            }
+                        } else {
+                            // run for trained net
                             IResultLayer lr = process(meta, threads);
-                            while ((idsToFix = resultComparingStrategy.getIdsStudy(lr.interpretResult(), desiredResult)).size() > 0) {
-                                meta.getInputResolver().saveHistory();
-                                meta.getInputResolver().getSignalPersistStorage().cleanMiddleLayerSignals();
-                                Integer layerId = meta.getResultLayer().getID();
-                                HashMap<Long, List<ISignal>> studyMap = new HashMap<>();
-                                for (IResult res : idsToFix) {
-                                    studyMap.put(res.getNeuronId(), iObjectStudyingAlgo.getLearningSignals(desiredResult, meta));
-                                }
-                                HashMap<Integer, HashMap<Long, List<ISignal>>> studyingRequest = new HashMap<>();
-                                studyingRequest.put(layerId, studyMap);
-                                meta.getInputResolver().getSignalPersistStorage().cleanMiddleLayerSignals();
-                                inputResolver.getSignalPersistStorage().putSignals(studyingRequest);
-                                lr = process(meta, threads);
-                            }
                             outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
                             meta.getInputResolver().saveHistory();
                             meta.getInputResolver().populateInput();
-                        }
-                        //Unsupervised or reinforced learning
-                    } else {
-                        IResultLayer lr = process(meta, threads);
-                        outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
-                        meta.getInputResolver().saveHistory();
-                        meta.getInputResolver().populateInput();
 
+                        }
+                    }
+                } else {
+                    try {
+                        Thread.sleep(10000);
+                        meta.getInputResolver().populateInput();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
                     }
                 }
             } else {
-                //Unsupervised or reinforced learning
+                //Unsupervised or reinforced learning with discriminators and infinite runs
+
                 IResultResolver resultResolver = null;
                 HashMap<String, StructMeta> discriminators = new HashMap<String, StructMeta>();
                 Integer discriminatorsAmount = Integer.parseInt(context.getProperty("configuration.discriminatorsAmount"));
@@ -197,13 +220,22 @@ public class LocalApplication implements IApplication {
                 }
                 resultResolver = new SimpleResultResolver(context);
                 while (true) {
-                    IResultLayer lr = process(meta,threads);
-                    resultLayerHolder.setResultLayer(lr);
-                    if (resultResolver.resolveResult(meta, discriminators)) {
-                        outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
+                    if (meta.getInputResolver().getSignalPersistStorage().hasSignalsToProcess()) {
+                        IResultLayer lr = process(meta, threads);
+                        resultLayerHolder.setResultLayer(lr);
+                        if (resultResolver.resolveResult(meta, discriminators)) {
+                            outputAggregator.save(lr.interpretResult(), System.currentTimeMillis(), meta.getInputResolver().getRun(), context);
+                        }
+                        meta.getInputResolver().saveHistory();
+                        meta.getInputResolver().populateInput();
+                    } else {
+                        try {
+                            Thread.sleep(10000);
+                            meta.getInputResolver().populateInput();
+                        } catch (InterruptedException e) {
+                            e.printStackTrace();
+                        }
                     }
-                    meta.getInputResolver().saveHistory();
-                    meta.getInputResolver().populateInput();
                 }
 
             }
@@ -213,7 +245,7 @@ public class LocalApplication implements IApplication {
     }
 
 
-    private IResultLayer process(StructMeta meta,int threads) {
+    private IResultLayer process(StructMeta meta, int threads) {
 
         int i = 0;
         for (ILayerMeta met : meta.getLayers()) {
